Added GZIP compression of playlists

--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,12 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+
+        # Enable compression of the playlist
+        gzip on;
+        gzip_vary on;
+        gzip_types application/vnd.apple.mpegurl;
+
         if ($request_method = 'OPTIONS') {
            add_header 'Access-Control-Allow-Origin' '*';
            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
